# experiments

./: build_annotations.yaml  datamap.yaml  pyproject.toml
scripts/multi_model_analysis/: get_ed_distribution_at_points.py  get_ed_distribution_in_masks.py  get_local_z_map.py  get_regional_projections.py  project_density.py  test_fft.py
scripts/pandda_2_performance_statistics/: pandda_2_rebuild_performance.py
scripts/xchem_dataset_statistics/: get_number_of_system_hits.py
src/dlib/constants/: __init__.py
src/dlib/dcommon/: __init__.py
src/dlib/dplotting/: plot_projection.py
src/dlib/dsmall/: __init__.py
